Fix: overflowing in hierarchy horizontal

--- a/app/src/style.css
+++ b/app/src/style.css
@@ -158,7 +158,7 @@
     width: 1.2rem;
     height: 1.2rem;
     padding:0;
-    margin:0;
+    /* margin:0; */
     border: var(--nav-border-size) var(--med-grey) solid;
     background-color: var(--light-grey);
 }
@@ -194,6 +194,9 @@
 
 .on-right{
     text-align: right;
+}
+.flex-on-right{
+    margin-left: auto;
 }
 
 .width-auto{
